--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,21 +2,37 @@ version: '3.1'
 
 services:
 
-  # postgresdb:
-  #   image: postgres:16.2
-  #   ports:
-  #     - 5432:5432
-  #   environment:
-  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-  #     - POSTGRES_USER=${POSTGRES_USER}
-  #     - POSTGRES_DB=${POSTGRES_DB}
+  postgresdb:
+    image: postgres:16.2
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
 
   backend:
     build:
       context: ./backend
+    # python insertdatatodb.py should only be run once to avoid duplication of data in DB
+    command: >
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python insertdatatodb.py && 
+             python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
     volumes:
       - ./backend:/backend
+    environment:
+      - SECRET_KEY=devsecretkey
+      - DEBUG=1
+      - DB_HOST=postgresdb
+      - DB_NAME=${POSTGRES_DB}
+      - DB_USER=${POSTGRES_USER}
+      - DB_PWD=${POSTGRES_PASSWORD}
+    depends_on:
+      - postgresdb
+
         
 
