Contarize the application with docker compose

--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,13 +1,13 @@
-FROM node:20-alpine
+FROM node:22-alpine3.18
 
-WORKDIR /app
-
-COPY package*.json ./
+WORKDIR /frontend
+COPY package*.json .
 
 RUN npm install
-
+    
 COPY . .
 
-EXPOSE 5173
+EXPOSE 3000
 
-CMD [ "npm", "run", "dev" ]
+
+
