--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,27 @@
 version: '3.1'
-
 services:
 
   postgresdb:
     image: postgres:16.2
+    container_name: postgresdb_c
     ports:
       - 5432:5432
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - ./database:/var/lib/postgresql/data
 
   backend:
     build:
       context: ./backend
+    container_name: backend_c
+    # add python insertdatatodb.py - this sciprt inserts the initial data to postgres db 
     # python insertdatatodb.py should only be run once to avoid duplication of data in DB
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
-             python insertdatatodb.py && 
              python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
@@ -31,8 +34,22 @@ services:
       - DB_NAME=${POSTGRES_DB}
       - DB_USER=${POSTGRES_USER}
       - DB_PWD=${POSTGRES_PASSWORD}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
       - postgresdb
+
+  frontend:
+    build: 
+      context: ./frontend
+    container_name: frontend_c
+    command: npm run dev
+    ports:
+      - 3000:3000
+    environment:
+      - VITE_API_URL=${VITE_API_URL}
+    depends_on:
+      - backend
+
 
         
 
