--- a/.github/workflows/main_frontend.yaml
+++ b/.github/workflows/main_frontend.yaml
@@ -4,6 +4,11 @@ on:
         branches:
             - main  
     workflow_dispatch:
+env:
+  AZURE_WEBAPP_NAME: favbooks   
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      
+  NODE_VERSION: '20'
+  
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -13,11 +18,13 @@ jobs:
                 sparse-checkout: |
                     .github
                     frontend
+            - name: Print Repositry
+              run: ls -la
 
             - name: Set up Node.js
               uses:  actions/setup-node@v3
               with:
-                node-version: '20'
+                node-version: ${{ env.NODE_VERSION }}
             - name: Install dependencies and build
               run: |
                 npm install
@@ -33,6 +40,9 @@ jobs:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
         runs-on: ubuntu-latest
         needs: build
+        environment:
+          name: 'production'
+          url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
         
         steps:
             - name: Download artifact from build job
@@ -44,7 +54,7 @@ jobs:
               id: deploy-to-webapp
               uses: azure/webapps-deploy@v2
               with:
-                app-name: favbooks
-                slot-name: 'Production'
+                app-name: ${{ env.AZURE_WEBAPP_NAME }}
+                slot-name: 'production'
                 publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
-                package: .
+                package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
