--- a/.github/workflows/main_frontend.yaml
+++ b/.github/workflows/main_frontend.yaml
@@ -18,14 +18,14 @@ jobs:
                 sparse-checkout: |
                     .github
                     frontend
-            - name: Print Repositry
-              run: ls -la
 
             - name: Set up Node.js
+              
               uses:  actions/setup-node@v3
               with:
                 node-version: ${{ env.NODE_VERSION }}
             - name: Install dependencies and build
+              working-directory: ./frontend
               run: |
                 npm install
             
