--- a/.github/workflows/main_frontend.yaml
+++ b/.github/workflows/main_frontend.yaml
@@ -35,6 +35,7 @@ jobs:
               with:
                 name: node-app
                 path: dist
+                if-no-files-found: error
     
     deploy:
         env:
