--- a/.github/workflows/main_frontend.yaml
+++ b/.github/workflows/main_frontend.yaml
@@ -34,7 +34,7 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                 name: node-app
-                path: /frontend/dist
+                path: ./frontend/dist
                 if-no-files-found: error
     
     deploy:
