--- a/.github/workflows/main_frontend.yaml
+++ b/.github/workflows/main_frontend.yaml
@@ -6,7 +6,7 @@ on:
     workflow_dispatch:
 env:
   AZURE_WEBAPP_NAME: favbooks   
-  AZURE_WEBAPP_PACKAGE_PATH: './frontend'      
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      
   NODE_VERSION: '20'
   
 jobs:
