--- a/.github/workflows/main_frontend.yaml
+++ b/.github/workflows/main_frontend.yaml
@@ -29,12 +29,14 @@ jobs:
               run: |
                 npm install
                 npm run build --if-present
+            - name: Zip artifact for deployment
+              run: zip release.zip ./* -r
             
             - name: Upload artifact for deployment job
               uses: actions/upload-artifact@v3
               with:
                 name: node-app
-                path: ./frontend/dist
+                path: release.zip
                 if-no-files-found: error
     
     deploy:
